--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script>if (window.module) module = window.module;</script>
     <title>SBIS3.Fiddler</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" type="text/css" href="lib/styles/style.css">
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
     <script type="text/javascript">
@@ -20,90 +21,16 @@
   </head>
   <body>
 
-  <div style="width:90%;height: 90%;margin: 24px auto; border: 1px solid rgba(50, 50, 50, 0.15);">
+<div class="app">
+  
+
+
+</div>
 <style>
-body {
-  position: absolute;
-}
-.mdl-list__item {
 
-  transition: all 0.2s ease-in-out;
-  border-bottom: 1px solid #eee;
-  padding: 22px !important;
-}
-.mdl-list__item:hover {
-  cursor: pointer;
-}
-.mdl-list__item-avatar, .mdl-list__item-avatar.material-icons {
-    height: 22px;
-    width: 22px;
-    /* box-sizing: border-box; */
-    border-radius: 12px;
-    background-color: rgb(159, 168, 218);
-    font-size: 23px;
-    color: #fff;
-    display: block;
-}
-.mdl-list__item-secondary-action {
-  margin-left: 16px;
-}
-.mdl-list__item:hover {
-  background: #eee;
-}
-.mdl-list__item span.mdl-list__item-primary-content{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    word-wrap: break-word;
-    color:#434343;
-    font-weight: 200;
-      font-size: 0.99rem;
-}
-.demo-list-radio {
-  display: inline;
-}
-.demo-card-square {
-  width: 600px;
-  left: 50%;
-  margin-left: -300px;
-  height: 300px;
-  top: 20%;
-  position: absolute;
-  z-index: 1002;
-
-}
-.overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1000;
-  background: rgba(19, 9, 21, 0.32);
-
-
-}
-.btnWrapper .mdl-button {
-  float: right;
-  position: fixed;
-  bottom: 40px;
-  right: 5%;
-}
-.mdl-list {
-  margin: 0;
-  padding:0;
-}
 </style>
 
 
-<ul class="demo-list-control mdl-list" style="font-size: 0.8rem !important;">
-</ul>
-
-</div>
-
-
-<div class="btnWrapper">
-  <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
-  <i class="material-icons">add</i>
-</button>
-</div>
 
   </body>
 
