--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
 
-  <div style="width:90%;height: 90%;margin: 24px auto; border: 1px solid rgba(50, 50, 50, 0.15);">
+  <div style="width:90%;height: 90%;margin: 24px auto; box-shadow:         1px 1px 16px 0px rgba(50, 50, 50, 0.06);">
 <style>
 body {
   position: absolute;
