--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <!-- Insert this line after script imports -->
 <script>if (window.module) module = window.module;</script>
     <title>SBIS3.Fiddler</title>
+    <link rel="stylesheet" href="node_modules/sweetalert/dist/sweetalert.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="lib/styles/style.css">
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
+    <script src="node_modules/sweetalert/dist/sweetalert.min.js"></script>
     <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
     <script type="text/javascript">
       const Backbone = require('backbone')
